<resources>
    <string name="app_name">Balance Lifestyle</string>
    <string name="image_logo">Logotipo de la aplicacion que muestra balance de la vida.</string>
    <string name="app_title">BALANCE LIFESTYLE</string>
    <string name="app_slogan">\"Vive con conciencia. </string>
    <string name="app_slogan2">Planifica con inteligencia.\"</string>
    <string name="app_slogan3">\"Vive con conciencia.Planifica con inteligencia.\"</string>
    <string name="button_login">LOGIN with e-mail</string>
    <string name="button_sign_up">Sign Up</string>

    <string name="title_login">ENTRA EN TU PERFIL</string>
    <string name="hint_email">Email:</string>
    <string name="hint_password">Password:</string>
    <string name="reset">Reset password</string>
    <string name="button_entrar">LOGIN</string>

    <string name="signUp_title">SIGN UP</string>
    <string name="hint_name">Name:</string>
    <string name="hint_lastName">Last name:</string>
    <string name="hint_age">Age:</string>
    <string name="reset_title">RECUPERAR CONTRASEÑA</string>
    <string name="button_reset">RESET PASSWORD</string>


    <string name="title_logout">SALIR</string>
    <string name="title_delete">ELIMINAR PERFIL</string>
    <string name="success_reset">Enlace para cambiar contraseña ha sido enviado con exito</string>


    <string name="user_info">%1$s %2$s, %3$d años</string>

    <string name="citation">\" Como un artesano que trabaja pacientemente en su obra,
        cada día tenemos la oportunidad de esculpir la mejor versión de nosotros mismos.\"</string>

    <string name="section_balance">BALANCE</string>
    <string name="section_goals">GOALS</string>
    <string name="section_lifestyle">LIFESTYLE</string>
    <string name="icon_wheel">Rueda de balance</string>
    <string name="icon_habits">Habitos</string>
    <string name="icon_gratitud">Gratitud</string>
    <string name="icon_metas">Metas</string>
    <string name="icon_plannig">Plan de mes</string>
    <string name="icon_toDo">To Do</string>
    <string name="icon_wishlist">Whishlist</string>
    <string name="icon_travel">Viajes</string>
    <string name="icon_food">Menu semanal</string>

    <string name="habits_title">MIS NUEVOS HABITOS</string>
    <string name="citation1">\"Peqeños pasos cada dia conducen a los grandes cambios.\"</string>
    <string name="button_habits">Boton para añadir los habitos en la lista</string>
    <string name="recycler">Descripción para RecyclerView</string>

    <string name="title_addHabit">AÑADE UN HÁBITO EN TU LISTA</string>
    <string name="hint_addHabit">Introduce un hábito</string>

    <string name="habit_salud">Hábitos de actividades fisicas y salud </string>
    <string name="habit_mental">Hábitos de salud mental y emocional</string>
    <string name="habit_relaciones">Hábitos sociales y relaciones</string>
    <string name="habit_desarrollo">Hábitos de productividad y desarrollo personal</string>
    <string name="habit_creatividad">Hábitos creativos y espirituales</string>
    <string name="habit_finance">Hábitos financieros</string>
    <string name="habit_higuiene">Habitos de higuiene</string>

    <string name="button_saveHabit">GUARDAR</string>


    <string name="wish_title">%s</string>
    <string name="wish_note">%s</string>
    <string name="wishlist_title">LISTA DE MIS DESEOS</string>
    <string name="button_description">Boton para añadir nota en la lista de deseos</string>


    <string name="title_addWishList">AÑADE UNA NOTA EN TU LISTA</string>
    <string name="hint_addWishTitle">Introduce un titulo</string>
    <string name="hint_addWishNote">Introduce una nota</string>
    <string name="button_saveWish">GUARDAR</string>

    <string name="button_toDo">Boton para añadir notas en la lista To Do</string>
    <string name="title_toDo">TO DO LIST</string>

    <string name="note_priorityHigh">Prioridad alta </string>
    <string name="note_priorityMedium">Prioridad media </string>
    <string name="note_priorityLow">Prioridad baja </string>
    <string name="title_addNote">AÑADIR UNA NOTA A LA LISTA </string>
    <string name="hint_addNote">Introduce una nota</string>


    <string name="do_title">HACER AHORA</string>
    <string name="doNow_note">%s</string>

    <string name="planing_title">PLANIFICAR</string>
    <string name="planing_note">%s</string>

    <string name="delegate_title">DELEGAR</string>
    <string name="delegate_note">%s</string>


    <string name="delete_title">ELIMINAR</string>
    <string name="delete_note">%s</string>

    <string name="goals_month">METAS DEL MES</string>
    <string name="matrix_name">LA MATRIZ DE EISENHOWER</string>
    <string name="goalsNotes_text">%s</string>

    <string name="matrix_title">AÑADIR NOTAS EN TU LISTA</string>
    <string name="matrix_hint">Introduce una nota</string>
    <string name="note_doNow">Hacer ahora</string>
    <string name="note_planing">Planificar</string>
    <string name="note_delegate">Delegar</string>
    <string name="note_delete">Eliminar</string>
    <string name="matrix_button">GUARDAR</string>

    <string name="addGoals_title">AÑADIR META DEL MES</string>
    <string name="meta_hint">Introduce una meta: </string>
    <string name="date_hint">Introduce una fecha: </string>
    <string name="proposite_hint">Introduce un proposito: </string>
    <string name="recompence_hint">Introduce una recompensa: </string>
    <string name="title_action">PLAN DE ACTION</string>
    <string name="hint_action">Introduce plan de action</string>
    <string name="save_addGoals">GUARDAR</string>

</resources>