<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".AddHabitActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_addHabit"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:textColor="@color/blue_dark"
        android:textSize="18sp"
        android:background="@drawable/title_bg"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextAddHabit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPersonName"
        android:hint="@string/hint_addHabit"
        android:layout_marginTop="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/notes_bg"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding = "50dp">

        <RadioButton
            android:id="@+id/radioButtonSalud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_salud"
            android:textColor="@color/coral"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonMental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_mental"
            android:textColor="@color/coral"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonRelaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_relaciones"
            android:textColor="@color/coral"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonDesarrollo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_desarrollo"
            android:textColor="@color/coral"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonCreatividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_creatividad"
            android:textColor="@color/coral"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonFinance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_finance"
            android:textColor="@color/coral"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonHiguiene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_higuiene"
            android:textColor="@color/coral"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_saveHabit"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/blue_dark"/>

</LinearLayout>