<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/beige"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewSignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue_dark"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:inputType="textCapWords"
            android:hint="@string/hint_name"
            android:layout_margin="8dp"
            android:background="@drawable/notes_bg"/>


        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:inputType="textCapWords"
            android:background="@drawable/notes_bg"
            android:hint="@string/hint_lastName"
            android:layout_margin="8dp"/>


        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:hint="@string/hint_age"
            android:layout_margin="8dp"
            android:background="@drawable/notes_bg" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_margin="8dp"
            android:background="@drawable/notes_bg" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_margin="8dp"
            android:background="@drawable/notes_bg" />


        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_up"
            android:backgroundTint="@color/blue_dark"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"/>


    </LinearLayout>

</ScrollView>

