<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".AddHabitActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_addNote"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/blue_dark"
        android:textSize="18sp"
        android:background="@drawable/title_bg"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextAddNote"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPersonName"
        android:hint="@string/hint_addNote"
        android:layout_marginTop="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding = "50dp">

        <RadioButton
            android:id="@+id/radioButtonHighPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_priorityHigh"
            android:textColor="@color/coral"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonMediumPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_priorityMedium"
            android:textColor="@color/coral"
            android:textStyle="bold" />


        <RadioButton
            android:id="@+id/radioButtonLowPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_priorityLow"
            android:textColor="@color/coral"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_saveHabit"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/blue_dark"/>

</LinearLayout>