<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".AddGoalsOfMonthActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addGoals_title"
        android:textColor="@color/blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextAddGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/notes_bg"
        android:hint="@string/meta_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <EditText
        android:id="@+id/editTextAddDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/notes_bg"
        android:hint="@string/date_hint"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddGoals" />


    <EditText
        android:id="@+id/editTextAddProposite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/notes_bg"
        android:hint="@string/proposite_hint"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddDate" />

    <EditText
        android:id="@+id/editTextAddRecompence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/notes_bg"
        android:hint="@string/recompence_hint"
        android:inputType="datetime"
        app:layout_constraintBottom_toTopOf="@+id/textViewActionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddProposite"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewActionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_action"
        android:textColor="@color/coral"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittextAddAction0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddRecompence" />


    <EditText
        android:id="@+id/edittextAddAction0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/notes_bg"
        android:hint="@string/hint_action"
        android:inputType="textMultiLine"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActionTitle"/>

    <EditText
        android:id="@+id/edittextAddAction1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/notes_bg"
        android:hint="@string/hint_action"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextAddAction0"/>

    <EditText
        android:id="@+id/edittextAddAction2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/notes_bg"
        android:hint="@string/hint_action"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextAddAction1"/>

    <EditText
        android:id="@+id/edittextAddAction3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/notes_bg"
        android:hint="@string/hint_action"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextAddAction2"/>

    <EditText
        android:id="@+id/edittextAddAction4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/notes_bg"
        android:hint="@string/hint_action"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextAddAction3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_dark"
        android:text="@string/save_addGoals"
        android:textStyle="bold"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextAddAction4" />


</androidx.constraintlayout.widget.ConstraintLayout>